--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,6 @@ dependencies {
 
     implementation 'com.caverock:androidsvg-aar:1.4'
 
+    implementation 'org.sufficientlysecure:html-textview:3.9'
+
 }
