--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+        maven { url 'https://jitpack.io' }
     }
 }
 
