--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/SplashTheme"
         android:usesCleartextTraffic="true"
         android:launchMode="singleTask"
         android:largeHeap="true"
@@ -20,7 +20,7 @@
         <activity
             android:name=".ui.login.view.LoginActivity"
             android:configChanges="keyboard|orientation|screenSize"
-            android:theme="@style/WelcomeTheme">
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,26 +29,32 @@
         </activity>
 
         <activity
+            android:theme="@style/AppTheme"
             android:name=".ui.main.view.activities.MainActivity"
             android:configChanges="orientation|screenSize" />
 
         <activity
+            android:theme="@style/AppTheme"
             android:name=".ui.freelancers.view.FreelancerDetailActivity"
             android:label="@string/profile_view" />
 
         <activity
+            android:theme="@style/AppTheme"
             android:name=".ui.threads.view.ThreadMessagesActivity"
             android:label="@string/thread_view" />
 
         <activity
+            android:theme="@style/AppTheme"
             android:name=".ui.employers.view.EmployerDetailActivity"
             android:label="@string/employer_view" />
 
         <activity
+            android:theme="@style/AppTheme"
             android:name=".ui.project.view.ProjectDetailActivity"
             android:label="@string/project_view" />
 
         <activity
+            android:theme="@style/AppTheme"
             android:name=".ui.contest.view.ContestDetailActivity"
             android:label="@string/contest_view" />
 
