--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         roomVersion = ROOM_VERSION
         okhttp3LogInterceptor = OKHTTP3LOGINTERCEPTOR_VERSION
         architectureComponents = ARHITECTURECOMPONENTS_VERSION
+        workVersion = WORK_VERSION
     }
     repositories {
         google()
