--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,5 @@ RETROFIT_VERSION=2.6.0
 kotlin.code.style=official
 ANDROID_MIN_SDK_VERSION=21
 ARHITECTURECOMPONENTS_VERSION=2.2.0
+WORK_VERSION=2.3.4
 android.enableJetifier=true
