--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,5 @@ kotlin.code.style=official
 ANDROID_MIN_SDK_VERSION=21
 ARHITECTURECOMPONENTS_VERSION=2.2.0
 WORK_VERSION=2.3.4
+PREFERENCES_VERSION=1.1.1
 android.enableJetifier=true
