--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,6 @@ dependencies {
 
     implementation "androidx.work:work-runtime-ktx:$workVersion"
 
+    implementation "androidx.preference:preference:$preferencesVersion"
+
 }
