--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ out/
 # Gradle files
 .gradle/
 build/
+/release_gradle.properties
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -50,3 +51,5 @@ freeline_project_description.json
 /.idea/
 /keystore.properties
 /app/fabric.properties
+
+/app/keystore-public
