--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ ANDROID_TARGET_SDK_VERSION=28
 OKHTTP3LOGINTERCEPTOR_VERSION=3.10.0
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 ANDROID_COMPILE_SDK_VERSION=28
-VERSION_NAME=1.0.0
+VERSION_NAME=1.0.0-dev
 VERSION_CODE=1
 KOTLIN_VERSION=1.3.61
 RETROFIT_VERSION=2.6.0
