--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,6 @@ dependencies {
 
     implementation "androidx.preference:preference:$preferencesVersion"
 
+    implementation "com.android.billingclient:billing-ktx:$billingVersion"
+
 }
