--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,6 @@ ANDROID_TARGET_SDK_VERSION=28
 OKHTTP3LOGINTERCEPTOR_VERSION=3.10.0
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 ANDROID_COMPILE_SDK_VERSION=28
-VERSION_NAME=1.0.0-dev
-VERSION_CODE=1
 KOTLIN_VERSION=1.3.61
 RETROFIT_VERSION=2.6.0
 kotlin.code.style=official
@@ -17,3 +15,7 @@ ARHITECTURECOMPONENTS_VERSION=2.2.0
 WORK_VERSION=2.3.4
 PREFERENCES_VERSION=1.1.1
 android.enableJetifier=true
+BILLING_VERSION=3.0.0
+
+VERSION_NAME=1.0.1-dev
+VERSION_CODE=4
