--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@ PREFERENCES_VERSION=1.1.1
 android.enableJetifier=true
 BILLING_VERSION=3.0.0
 
-VERSION_NAME=1.0.1-dev
-VERSION_CODE=7
+VERSION_NAME=1.0.1
+VERSION_CODE=8
