--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,13 @@
             android:theme="@style/AppTheme" />
 
         <activity
+            android:name=".ui.project.view.UpdateProjectActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize"
+            android:configChanges="orientation|screenSize"
+            android:label="@string/update_project"
+            android:theme="@style/AppTheme" />
+
+        <activity
             android:name=".ui.base.LinksParserActivity"
             android:configChanges="keyboard|orientation|screenSize"
             android:noHistory="true"
