--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,4 +116,6 @@ dependencies {
 
     implementation "com.android.billingclient:billing-ktx:$billingVersion"
 
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+
 }
