--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,13 +73,13 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.annotation:annotation:1.1.0'
 
     //design libs
-    implementation 'com.google.android.material:material:1.3.0-alpha01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'
+    implementation 'com.google.android.material:material:1.4.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     //di
     implementation "org.koin:koin-android:$koinVersion"
@@ -89,7 +89,6 @@ dependencies {
     //arhitecture components
     implementation "android.arch.lifecycle:viewmodel:$architectureComponents"
     implementation "androidx.lifecycle:lifecycle-common-java8:$architectureComponents"
-    implementation "androidx.lifecycle:lifecycle-extensions:$architectureComponents"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$architectureComponents"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$architectureComponents"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$architectureComponents"
@@ -101,7 +100,7 @@ dependencies {
     implementation "android.arch.navigation:navigation-ui:1.0.0"
 
     implementation 'com.github.vivchar:RendererRecyclerViewAdapter:3.0.3-SNAPSHOT'
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-rc01"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
