--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
       - name: set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: 11
+          distribution: 'temurin'
+          cache: gradle
       - name: Build with Gradle
         run: ./gradlew assembleDebug
